--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
 </head>
 <body>
-        
+<section class="metronome">      
   <h1>Hello Metronome</h1>
   <div class="counter">0</div>
   <button class="reset">reset</button>
@@ -32,8 +32,7 @@
     <option value="click">Click</option>
     <option value="hihat">Hi-Hat</option>   
     <option value="kick">Kick</option>   
-    <option value="clap">Clap</option>   
-    <option value="beep">Beep</option>   
+    <option value="clap">Clap</option>    
   </select>
  <!-- <button class="soundTest">test</button> -->
  <h2>Accents:</h2>
@@ -43,7 +42,7 @@
   <option value="3/4">3/4</option>
   <option value="4/4">4/4</option>
 </select>
-
+</section>  
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
   <script src="js/out.js"></script>
