--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
   </div>
 
-  <input class="bpmScreen" value="150" type="number" onchange="limiter(this)">BPM</input>
+  <input class="bpmScreen" value="150" max="450" type="number" onchange="limiter(this)">BPM</input>
   <div class="playStop">
     <button class="play"></button>
     <button class="stop"></button>
